# 2025-bip-project-wallai

./: .gitignore  README.md
assets/images/class_diagram/: drivetrain.puml
src/detection/: dose_tf.py  yolo_dose.py
src/drivetrain/: CMakeLists.txt  Makefile
src/drivetrain/include/: FXAS21002.hpp  FXOS8700.hpp  IAccelerometer.hpp  IGyroscope.hpp  IMagnometer.hpp  IServo.hpp  ParallexFeedback360.hpp
src/drivetrain/src/: ParallexFeedback360.cpp  main.cpp
